# ASR-poc

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: transcribe.py
src/: app.py  asr.py  audio.py  config.py  diarization.py  main.py  schemas.py  separation.py
tests/: test_api.py
