[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-sep-asr-poc"
version = "0.1.0"
description = "POC: speech separation + ASR microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "faster-whisper>=1.0",
  "demucs>=4.0.1",
  "torch>=2.3.0",     # CPU works; CUDA used automatically when available
  "requests>=2.32",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

